basic-file-structures/Ingres/Ingress-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-ingress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-ingress
  template:
    metadata:
      labels:
        name: nginx-ingress
    spec:
      containers:
        - name: nginx-ingress-controller
          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.21.0
          args:
          # must move into the correct directory to run the service 
            - /nginx-ingress-controller 
            # create a configmap for the nginx configuration to decouple err-log-path, keep-alive threshold, ssl-protocols, session timeouts, and other configurations
            # having the configmap allows for easier management of the configurations and allows for easier updates when you want to
            - --configmap=$(POD_NAMESPACE)/nginx-configuration
          ports:
          # theses ports are the ports that the ingress controller will listen on and are standard ports for http and https traffic 
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
