basic-file-structures/Ingres/Ingress-rule-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wear-watch
spec:
  rules:
    - host: wear.my-online-store.com
      http:
        paths:
        - path: /wear
          pathType: Prefix
          backend:
            service:
              name: wear-service
              port:
                number: 80
    - host: watch.my-online-store.com
      http:
        paths:
        - path: /watch
          pathType: Prefix
          backend:
            service:
              name: watch-service
              port:
                number: 80

# this will split the traffic between the two services based on the host header which creates 2 rules
# both Ingress-rule-1.yaml and Ingress-rule-2.yaml are used to create the same ingress resource
